[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/Enemies.png" type="Texture" id=1]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/BoneTower.gd" type="Script" id=3]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 16 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "ShootLeft"
length = 2.4
step = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "fireLeft"
}, {
"args": [  ],
"method": "fireLeft"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.760784, 0.203922, 0.203922, 1 ), Color( 1, 1, 1, 1 ), Color( 0.760784, 0.203922, 0.203922, 1 ), Color( 1, 1, 1, 1 ), Color( 0.760784, 0.203922, 0.203922, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ShootRight"
length = 2.4
step = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "fireRight"
}, {
"args": [  ],
"method": "fireRight"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.760784, 0.203922, 0.203922, 1 ), Color( 1, 1, 1, 1 ), Color( 0.760784, 0.203922, 0.203922, 1 ), Color( 1, 1, 1, 1 ), Color( 0.760784, 0.203922, 0.203922, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="BoneTower" type="Node2D" groups=["AffectedByClock", "AffectedByRosary"]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 15
vframes = 4
frame = 53

[node name="TopMouth" type="Position2D" parent="Sprite"]
position = Vector2( -3, -8 )

[node name="BottomMouth" type="Position2D" parent="Sprite"]
position = Vector2( 3, 9 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 4 )
enemyName = "Bone Tower"
damage = 2
points = 400
weakHits = 8
strongHits = 6
hitbox = NodePath("../Hitbox")
hitSound = 1
drop = "enemy"

[node name="ShotTimer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -6, -12, 12, 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/ShootLeft = SubResource( 2 )
anims/ShootRight = SubResource( 4 )
